--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,25 +9,28 @@ html, body, .wrapper{
 /*========================
 Header styling starts here
 ========================*/
-nav{
-	margin: auto;
-	width: 80%;
-	background: #FFF;
+.navbar{
+	margin-bottom: 0;
 }
 
-nav .row{
-	margin-right: 0;
-	margin-left: 0;
+.fa-search{
+	float: left;
+	padding: 10px;
+	width: 70px;
+	text-align: center;
+	line-height: 30px;
+	color: #22C2FE;
 }
+
 #Login{
 	background: #FFF;
 }
 #Login a{
-	color: #007ee5;
+	color: #22C2FE;
 }
 
 #SignUp{
-	background: #007ee5;
+	background: #22C2FE;
 }
 #SignUp a{
 	color: #FFF;
@@ -39,28 +42,320 @@ Header styling ends here
 /*========================
 Main styling starts here
 ========================*/
-#content{
-	margin: auto;
-	width: 80%;
-	height: calc(100% - 56px);
+main{
+	position: relative;
+	width: 100%;
+	height: calc(100% - 52px);
 }
 
-#content .row{
-	margin-right: 0;
-	margin-left: 0;
+/*========================
+Main styling ends here
+========================*/
+
+#LeftSidebar{
+	position: absolute;
+	background: #424242;
+	width: 250px;
+	height: 100%;
+	z-index: 3;
 }
 
-#content .col-md-3{
+#LeftSidebar ul{
+	margin: 0;
 	padding: 0;
+	list-style-type: none;
+	height: 100%;
 }
 
-.LeftSidebar{
-	background: #969195;
+#LeftSidebar  ul  li  a{
+	display: block;
+	width: 100%;
+	color: #faf7f6;
+	text-decoration: none;
 }
 
-#homepage p{
-	color:  #faf7f6 ;
+#LeftSidebar [class*='fa-']{
+	float: left;
+	padding: 10px;
+	width: 70px;
+	text-align: center;
+	line-height: 30px;
+}
+
+#LeftSidebar li p{
+	padding: 10px;
+	line-height: 30px;
+}
+
+#LeftSidebar > ul li a p{
+	color: #DCDCDC;
+}
+
+#homepage{
+ text-align: center;
+}
+
+#RightSidebar{
+	width: calc(100% - 250px);
+	height: 100%;
+	margin-left: auto;
+}
+
+#upper{
+	background: #FF5C39;
+	width: 100%;
+	height: 50%;
+	position: relative;
+}
+
+#expection{
+	width: 550px;
+	height:255px;
+	/*background: powderblue;*/
+	position: absolute;
+	left: 100px;
+	top: 30px;
+}
+
+#expection > h1,#expection > h3,#expection > p{
+	color: #FCFFFF;
+}
+
+#register{
+ width: 250px;
+ height:188px;
+ background: #FFF;
+ position: absolute;
+ left: 620px;
+ top: 150px;
+ z-index: 3;
+}
+
+#register h4{
+	text-align: center;
+}
+
+#register ul{
+	list-style-type: none;
+	width: 100%;
+	padding: 20px;
+	margin: 0;
+}
+
+#register ul li{
+	display: block;	
+	/*background: yellow;*/
+	/*height: 35px;*/
+	width: 100%;
+
+}
+
+#register ul li i{
+	float: left;
+	padding: 10px;
+	width: 30px;
+  line-height: 20px;
+  padding: 0 0 0 10px;
+}
+#register ul li p{
+	text-align: left;
+	line-height: 20px;
+  /*padding: 10px;*/
+  padding: 0;
+  margin-bottom: 0;
+  font-size: 12px;
+} 
+
+#lower{
+	background: #F5F5F5;
+	width: 100%;
+	height: 50%;
+	position: relative;
+}
+
+#HotPicks{
+	width: 350px;
+	height:255px;
+	background: #FFF;
+	position: absolute;
+	left: 100px;
+	top: 30px;
+}
+
+#hot-picks{
+	width: 100%;
+	height: 70px;
+	text-align: center;
+	margin: 0;
+	padding: 20px;
+}
+
+.pick{
+	width: 100%;
+	height: 70px;
+  padding: 5px 15px 5px 10px;
+  border-style: solid none;
+  border-width: 1px;
+  border-color: #DCDCDC;
+}
+.thumbnail{
+	float: left;
+	height:100%;
+	width: 60px;
+	margin-bottom: 0;
+	padding: 0 5px;
+	border: none;
+}
+
+.thumbnail img{
+	border-radius: 50%;
+}
+.userinfo{
+	float: left;
+	width: 120px;
+  padding: 0 5px;
+}
+
+.useraction{
+	float: left;
+	width: calc(100% - 180px);
+	height:100%;	
+}
+
+.actionlogo{
+	float: left;
+	width: 30px;
+	height:100%;
+	margin-right: 10px;	
+  text-align: center;
+  padding: 15px 0 0 0;
+  background-color: white;
+}
+
+.actionlogo i{
+	padding: 10px 10px 10px 10px;
+	text-align: center;
+	background: grey;
+	color: #FFF;
+	border-radius: 50%;
+}
+
+.userchoice{
+	float: left;
+	width: calc(100% - 40px);
+	height:100%;
+	text-align: center;
+	
+}
+
+
+#HighScores{
+	width: 350px;
+	height:390px;
+	background: #FFFFFF;
+	position: absolute;
+	left: 470px;
+	top: 100px;
+}
+
+#High-Scores{
+	width: 100%;
+	height: 70px;
+	text-align: center;
+	margin: 0;
+	padding: 20px;
+	border-style: solid none;
+  border-width: 1px;
+  border-color: #DCDCDC;
+}
+
+.userscore{
+	width: 100%;
+	height: 60px;  
+}
+
+.firstuserscore{
+	padding-top:15px;
+	height: 65px;
+}
+
+.ranking{
+	float: left;
+	width: 30px;
+	height:30px;
+	border-radius: 50%;
+	border: 1px solid #DCDCDC;
+	margin: 10px 5px 5px 0;
+	padding: 5px 0 5px 0;
+	text-align: center;
+}
+
+.thumbscore{
+	height:40px;
+	width: 40px;
+	border-radius:50%;	
+	margin: 10px 10px 0px 5px;
+}
+
+.userscore .userinfo{
+	width: 190px;
+	height: 100%
+}
+
+.userscore .score{
+	float: left;
+	width: calc(100% - 295px);
+	height: 100%;
+	padding-top: 10px;
+}
+
+.csstriangle-BL{
+	position: absolute;
+
+	width: 0;
+height: 0;
+border-style: solid;
+border-width: 39px 0 0 39px;
+border-color: transparent transparent transparent #e5e5e5;
+
+left: 312px;
+	top: 0;
+	z-index: 3;
+
+}
+
+.csstriangle-TR{
+	position: absolute;
+width: 0;
+height: 0;
+border-style: solid;
+border-width: 0 39px 39px 0;
+border-color: transparent #F5F5F5 transparent transparent;
+
+left: 312px;
+	top: 0;
+	z-index: 3;
 }
 /*========================
 Main styling ends here
 ========================*/
+.bg-orange{
+	background: #FF5C39;
+}
+
+.bg-blue{
+	background:  #22C2FE;
+	color: #FFF;
+	width: 100%;
+}
+.button{
+    background-color: #FFF;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    width: 100%;
+    height: 50%;
+	  padding: 5px 10px;
+	  color: #22C2FE;
+	  border: 1px solid #22C2FE;
+}
